tests/jsr335/Semantics/LambdaExpressions/ReservedKeyword/ShouldFail/syntax12/Test.java


public class Test {
	
	public <_> void genMeth(_ t) {
		
	}
	
	public static void main(String[] args) {
		
    }
	
	
}